# deh-1599-trials

./: .dockerignore  .ecrc  .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  cdk-init.sh  pyproject.toml
.cdk-init/: patch-cdk-json.py
.github/workflows/: deploy-staging.yml  pre-commit.yml  pytest-branch.yml  pytest-pull-request.yml
